# gitscout

./: .gitignore  FIREBASE_SETUP.md  LICENSE  README.md  brainstorm.md  main.py  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: chat_routes.py  job_search_routes.py  profile_routes.py  routes.py
backend/app/models/: candidate_skills.py  chat.py  jd_spec.py  job_search.py  profile.py  requests.py  responses.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  config.ts  vite-env.d.ts
frontend/src/api/: candidate.ts  chat.ts  jobSearch.ts  profile.ts  search.ts
frontend/src/components/: CandidateCard.tsx  FilterPanel.tsx  ResultsList.tsx  SearchForm.tsx
frontend/src/context/: SearchContext.tsx
frontend/src/contexts/: AuthContext.tsx  SearchContext.tsx
frontend/src/data/: mockDashboardData.ts
frontend/src/hooks/: useCandidateSkills.ts  useChat.ts  useInfiniteScroll.ts  useSearchSSE.ts
frontend/src/lib/: firebase.ts
frontend/src/pages/: AuthPage.tsx  DashboardPage.tsx  HistoryPage.tsx  LandingPage.tsx  ProcessingPage.tsx  ProfilePage.tsx  SearchApp.tsx
frontend/src/styles/: global.css
frontend/src/types/: candidate.ts  dashboard.ts  index.ts
frontend/src/utils/: api.ts  candidateMapper.ts
specs/: PRODUCT_SPEC.md  api-limit.md  auth-page.md  brainstorm.md  candidate-window.md  chat-assistant.md  chat.md  filters.md  frontend.md  save-results.md  search-integration.md  search.md  userAuth.md
(+78 files in other folders)
